--- a/UI/ListStyle.uss
+++ b/UI/ListStyle.uss
@@ -54,6 +54,7 @@
     transition-duration: 0.1s;
     transition-timing-function: ease;
     transition-delay: 0s;
+    -unity-font-style: bold;
 }
 
 :hover > .z3-button-list {
