--- a/UI/PropertyListElementVT.uxml
+++ b/UI/PropertyListElementVT.uxml
@@ -1,4 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Packages/com.z3.ui-builder/UI/ListStyle.uss?fileID=7433441132597879392&amp;guid=06d2b6a4e0e0db94c966a720694a0d54&amp;type=3#ListStyle" />
-    <ui:Button text="+" display-tooltip-when-elided="true" name="add-button" class="z3-button-list" style="margin-right: 7px; margin-bottom: 6px;" />
+    <ui:VisualElement name="list-element-container">
+        <ui:Button text="x" display-tooltip-when-elided="true" name="remove-button" tooltip="Remove" class="button-list z3-button-list" />
+        <ui:VisualElement name="element-name" style="flex-grow: 1;" />
+    </ui:VisualElement>
 </ui:UXML>
